# ECEN602_workspace

./: .gitignore  CMakeLists.txt  README.md  abcd.txt  readme
HW1/: .Client.c.swp  .makefile.swk  .makefile.swl  .makefile.swm  .makefile.swn  .makefile.swo  .makefile.swp  Client  Client.c  Notes.scala  README  Server  Server.c  cl  client  makefile  readFast.c  readFast.h  se  server
HW2/: Client.c  README  SBCP.c  SBCP.h  Server.c  client  makefile  server
HW3/: Client.c  Notes.txt  Parser.c  README  Server.c  TFTP.c  TFTP.h  abcde.txt  makefile  readme
HW4/: Client  Client.c  HTTP.c  HTTP.h  Proxy  Proxy.c  ProxyBasic.c  ProxyBonus.c  makefile  readFast.h  readme  testExamples
HW5/: Readme.docx  ns2.tcl
Practice/: Client.c  Explainations.txt  Server.c  ServerSimple.c  client  server
documents/: HW1_testfile.docx  HW3_testfile.docx  HW4_testfile.docx
